--- a/jaxxons.house/computer/index.html
+++ b/jaxxons.house/computer/index.html
@@ -65,8 +65,10 @@ a:hover {
           <li><a href="https://redacted.ch/user.php?id=42143">red</a></li>
           <li><a href="https://www.yourworldoftext.com/~jaxxon/">yourworldoftext</a></li>
           <li><a href="https://letterboxd.com/jaxxon_a/">letterboxd</a></li>
+          <li><a href="https://www.are.na/jaxxon-a">are.na</a></li>
+          <li><a href="https://github.com/jaxxon-a">github</a></li>
           <li>e-mail me:<a href="mailto:jaxxon_a@protonmail.com">jaxxon_a@protonmail.com</a></li>
-          <li>discord: jaxxon#4080
+          <li>discord: [at]jaxxon#4080
         </ul>
   </div>
   <div class="column">
@@ -83,6 +85,8 @@ a:hover {
         <li><a href="https://youtu.be/LArkm4v5mWA">can we compile C in powerpoint?</a></li>
         <li><a href="https://youtu.be/cF5JedknFGU">master of puppets stylophone cover</a></li>
         <li><a href="https://jaxxons.house/violin.webm">tap violin</a></li>
+        <li></li>
+        <li>and many more on <a href="https://www.are.na/jaxxon-a">are.na</a></li>
         
       </ul>
   </div>
