--- a/jaxxons.house/index.html
+++ b/jaxxons.house/index.html
@@ -73,6 +73,8 @@ span:hover + .hoverimg{
           <li><a href="https://redacted.ch/user.php?id=42143">red</a></li>
           <li><a href="https://www.yourworldoftext.com/~jaxxon/">yourworldoftext</a></li>
           <li><a href="https://letterboxd.com/jaxxon_a/">letterboxd</a></li>
+          <li><a href="https://www.are.na/jaxxon-a">are.na</a></li>
+          <li><a href="https://github.com/jaxxon-a">github</a></li>
           <li>e-mail me:<a href="mailto:jaxxon_a@protonmail.com">jaxxon_a@protonmail.com</a></li>
           <li>discord: [at]jaxxon#4080
         </ul>
