--- a/jaxxons.house/computer/index.html
+++ b/jaxxons.house/computer/index.html
@@ -67,7 +67,7 @@ a:hover {
           <li><a href="https://letterboxd.com/jaxxon_a/">letterboxd</a></li>
           <li><a href="https://www.are.na/jaxxon-a">are.na</a></li>
           <li><a href="https://github.com/jaxxon-a">github</a></li>
-          <li>e-mail me:<a href="mailto:jaxxon_a@protonmail.com">jaxxon_a@protonmail.com</a></li>
+          <li>e-mail me:<a href="mailto:jaxxon_a@protonmail.com"> jaxxon_a@protonmail.com</a></li>
           <li>discord: [at]jaxxon#4080
         </ul>
   </div>
@@ -85,7 +85,7 @@ a:hover {
         <li><a href="https://youtu.be/LArkm4v5mWA">can we compile C in powerpoint?</a></li>
         <li><a href="https://youtu.be/cF5JedknFGU">master of puppets stylophone cover</a></li>
         <li><a href="https://jaxxons.house/violin.webm">tap violin</a></li>
-        <li></li>
+        <li style="color:#E6E6FA;">a</li>
         <li>and many more on <a href="https://www.are.na/jaxxon-a">are.na</a></li>
         
       </ul>
