--- a/jaxxons.house/index.html
+++ b/jaxxons.house/index.html
@@ -84,7 +84,7 @@ span:hover + .hoverimg{
       <ul style="list-style-type: none;">
         <li><a href="https://thesmellofrain.bandcamp.com/releases">Petrichor, the smell of rain</a> [ambient]</li>
         <li><a href="https://rosefelix.bandcamp.com/releases">felix rose</a> [ambient]</li>
-        <li><a href="https://budheavy.bandcamp.com/releases">Bud Heavy</a> [sludge / stoner metal]</li>
+        <li><a href="https://budheavy.bandcamp.com/releases">Bud Heavy</a> [sludge]</li>
         <li><a href="https://pispegel.bandcamp.com/releases">Pispegel</a> [diy punk]</li> 
         <li><a href="https://xltxbeats.bandcamp.com/releases">jaxxon</a> [beats]</li> 
       </ul>
@@ -104,12 +104,12 @@ span:hover + .hoverimg{
  <div class="row">
     <div class="column">
       <a href="http://www.instagram.com/catlover_garden/">
-       <img src="/cat_pics/cat.jpg" alt="cat" width=500 height=500>
+       <img src="/cat_pics/cat.jpg" alt="a nice cat" width=500 height=500>
       </a>
     </div>
     <div class="column">
       <a href="https://www.instagram.com/catlover_garden/">
-       <img src="/cat_pics/cat2.jpg" alt="cat" width=500 height=500>
+       <img src="/cat_pics/cat2.jpg" alt="the same nice cat but zoomed in" width=500 height=500>
       </a>
     </div>
   </div>
