--- a/jaxxons.house/headphones/index.html
+++ b/jaxxons.house/headphones/index.html
@@ -67,20 +67,20 @@ a:mailto {
         <li><a href="https://thesmellofrain.bandcamp.com/releases">Petrichor, the smell of rain</a> [ambient]</li>
         <li><a href="https://rosefelix.bandcamp.com/releases">felix rose</a> [ambient]</li>
         <li><a href="https://budheavy.bandcamp.com/releases">Bud Heavy</a> [sludge / stoner metal]</li>
-        <li><a href="https://pispegel.bandcamp.com/releases">Pispegel</a> [diy punk]</li> 
-        <li><a href="https://xltxbeats.bandcamp.com/releases">jaxxon</a> [beats]</li> 
+        <li><a href="https://pispegel.bandcamp.com/releases">Pispegel</a> [diy punk]</li>
+        <li><a href="https://xltxbeats.bandcamp.com/releases">jaxxon</a> [beats]</li>
         </ul>
   </div>
   <div class="column">
-    <p>playlists</p> 
+    <p>playlists</p>
       <ul style="list-style-type: none;">
         <li><a href="https://www.youtube.com/playlist?list=PLSF-biYYUDHLxWseIG553_5ZuZxRgdcfJ">sad & obscure</a> [yt]</li>
         <li><a href="https://www.youtube.com/playlist?list=PLSF-biYYUDHIz2V1UH_81nBXrut4q6z_W">incredible live sets</a> [yt]</li>
         <li><a href="https://open.spotify.com/playlist/0wlhnhAG8bjotY6VZfDMoy">supermarket</a> [spotify]</li>
         <li><a href="https://open.spotify.com/playlist/5N94KNKjo54KCevLzohAOT">shreddin</a> [spotify]</li>
-        <li><a href="https://open.spotify.com/playlist/0h11XEjzAojhU3LsNY97mz">dry heat</a> [spotify]</li>
+        <li><a href="https://open.spotify.com/playlist/0h11XEjzAojhU3LsNY97mz">sludge</a> [spotify]</li>
       </ul>
     <p style="font-size:15px;"><i>if you have any additions to any of these playlists, feel free to <a href="https://twitter.com/messages/compose?recipient_id=3028362837">dm me</a> or email me at <a href="mailto:jaxxon_a@protonmail.com">jaxxon_a@protonmail.com</a>. </i></p>
   </div>
-</div>  
+</div>
 </html>
