--- a/jaxxons.house/computer/index.html
+++ b/jaxxons.house/computer/index.html
@@ -72,7 +72,7 @@ a:hover {
         </ul>
   </div>
   <div class="column">
-    <p>bookmarks</p> 
+    <p>bookmarks</p>
       <ul style="list-style-type: none;">
         <li><a href="https://youtu.be/kewXtkGmDtw">austin weber - mamma mia</a></li>
         <li><a href="https://youtu.be/hoBatSC_2_A?t=66">mickey mouse eurobeat</a></li>
@@ -81,14 +81,14 @@ a:hover {
         <li><a href="https://youtu.be/puCv0FYItGA">the king of speed</a></li>
         <li><a href="https://www.mixcloud.com/TOLKIENBLACK/cvs-bangers-four-antifascist-blues-at-the-end-of-the-world/">CVS bangers 4</a></li>
         <li><a href="https://candybox2.github.io/">candybox 2</a></li>
-        <li><a href="http://defaultfile.name/">defaultfile.name</a></li>
+        <li><a href="https://www.youtube.com/watch?v=8-KvyKNSV7U">ian curtis rides a rollercoaster</a></li>
         <li><a href="https://youtu.be/LArkm4v5mWA">can we compile C in powerpoint?</a></li>
         <li><a href="https://youtu.be/cF5JedknFGU">master of puppets stylophone cover</a></li>
         <li><a href="https://jaxxons.house/violin.webm">tap violin</a></li>
         <li style="color:#E6E6FA;">a</li>
         <li>and many more on <a href="https://www.are.na/jaxxon-a">are.na</a></li>
-        
+
       </ul>
   </div>
-</div>  
+</div>
 </html>
