--- a/jaxxons.house/about/index.html
+++ b/jaxxons.house/about/index.html
@@ -5,14 +5,19 @@
     <meta name="viewport" content="width=device-width">
     <title>about me</title>
     <link href="/style.css" rel="stylesheet" type="text/css">
-  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-  <link rel="icon" href="/favicon.ico" type="image/x-icon">
-  <base target="_blank">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <base target="_blank">
   <style>
   #container {
     margin-left: auto;
     margin-right: auto;
     width: 600px;
+    align-content: center;
+  }
+  #image {
+    margin-left: 183.5px;
+    margin-right: 183.5px;
     align-content: center;
   }
   body {
@@ -21,21 +26,6 @@
     font-size: 10;
     font-family: Courier;
     padding-left: 3%;
-  }
-  .my_list a {
-  color: #800080;
-  }
-  a:link {
-    color: #800080;
-    text-decoration: none;
-  }
-  a:visited {
-    color: #880080;
-    text-decoration: none;
-  }
-  a:hover {
-    text-decoration: underline;
-    color:#c225b9;
   }
   p {
     margin: 2px;
@@ -48,29 +38,33 @@
   </head>
   <body>
   <div id="container">
-    <img style="margin-left:auto;margin-right:auto;" src="https://scontent-amt2-1.cdninstagram.com/v/t51.2885-15/sh0.08/e35/p750x750/79151995_453544642012928_84132077164685201_n.jpg?_nc_ht=scontent-amt2-1.cdninstagram.com&_nc_cat=108&_nc_ohc=i8c88O00plwAX8JFE1H&oh=c59d0d30b4dcdfc4996f084599282d65&oe=5EC3D85E" alt="me" width=233 height=auto>
-    <p style="font-size:12px;text-align:center;">shot by <a href="https://www.instagram.com/skeletonplant.jpeg/">@skeletonplant.jpeg</a></p>
+    <div id="image">
+      <img src="/me.jpg" alt="me" width=233 height=auto>
+    </div>
+    <p style="font-size:12px;text-align:center;"><i>shot by <a href="https://www.instagram.com/skeletonplant.jpeg/">@skeletonplant.jpeg</a></i></p>
 <br>
-       <p style="text-align:center;">hi. my name is jaxxon.</p>
+    <p>hi. my name is jaxxon.</p>
 <br>
-<p>i was born and raised in the netherlands, and i have lived in
-<a href="https://en.wikipedia.org/wiki/Alkmaar">Alkmaar</a> &
-<a href="https://en.wikipedia.org/wiki/The_Hague">Den Haag</a> for most of my life.
-i was raised <a href="https://en.wikipedia.org/wiki/Bilingualism">bilingually</a>,
-and i have <a href="">3 moms</a> believe it or not.
-</p>
+    <p style="line-height: 1.2;">i was born and raised in the netherlands, and i have lived in
+    <a href="https://en.wikipedia.org/wiki/Alkmaar">Alkmaar</a> &
+    <a href="https://en.wikipedia.org/wiki/The_Hague">Den Haag</a> for most of my life.
+    i was raised <a href="https://en.wikipedia.org/wiki/Bilingualism">bilingually</a>,
+    and i have 3 moms believe it or not. i no longer have green hair [sadly] but i like this picture a lot.
+    </p>
+
 <br>
 <br>
     <p>here is a list of things i like:
     <ul style="list-style-type: circle;line-height: 1.6;">
-      <li>cats (see <a href="https://jaxxons.house/cat">here</a>)</li>
-      <li>making & listening to music (see <a href="https://jaxxons.house/headphones">here</a>)</li>
+      <li><a href="https://jaxxons.house/cat">cats</a></li>
+      <li>making & listening to <a href="https://jaxxons.house/headphones">music</a></li>
       <li>finding cool websites</li>
+      <li>tetris</li>
       <li>going on long walks</li>
-      <li>taking pictures</li>
+      <li>taking <a href="https://instagram.com/jaxxon_aperture">pictures</a></li>
       <li>making new internet friends</li>
-      <li>having nice, serious talks with people and what they are going through</li>
       <li>solving problems</li>
+      <li>having nice, serious talks with people and what they are going through</li>
     </ul>
     </p>
   </div>
