--- a/jaxxons.house/index.html
+++ b/jaxxons.house/index.html
@@ -26,41 +26,14 @@ body {
   clear: both;
   display: table;
 }
-.my_list a {
-color: #800080;
-}
-a:link {
-  color: #800080;
-  text-decoration: none;
-}
-a:visited {
-  color: #880080;
-  text-decoration: none;
-}
-a:hover {
-  text-decoration: underline;
-  color:#c225b9;
-}
-p { 
+p {
   margin: 2px;
 }
-img {
-  border-radius: 7%;
-}
-.hoverimg{
-    display: none
-}
-span:hover + .hoverimg{
-    display: block;
-    width: 100px;
-    height: 100px;
-}
   </style>
-  
   </head>
   <body style="background-color:#E6E6FA">
 <br>
-    <p><strong>hello. i'm jaxxon.</strong></p> 
+    <p><strong>hello. i'm <a href="https://jaxxons.house/about" target="_self">jaxxon.</a></strong></p>
 <br>
 <!-- list of socials etc -->
 <div class="row">
@@ -80,13 +53,13 @@ span:hover + .hoverimg{
         </ul>
   </div>
   <div class="column">
-    <p>music projects</p> 
+    <p>music projects</p>
       <ul style="list-style-type: none;">
         <li><a href="https://thesmellofrain.bandcamp.com/releases">Petrichor, the smell of rain</a> [ambient]</li>
         <li><a href="https://rosefelix.bandcamp.com/releases">felix rose</a> [ambient]</li>
         <li><a href="https://budheavy.bandcamp.com/releases">Bud Heavy</a> [sludge]</li>
-        <li><a href="https://pispegel.bandcamp.com/releases">Pispegel</a> [diy punk]</li> 
-        <li><a href="https://xltxbeats.bandcamp.com/releases">jaxxon</a> [beats]</li> 
+        <li><a href="https://pispegel.bandcamp.com/releases">Pispegel</a> [diy punk]</li>
+        <li><a href="https://xltxbeats.bandcamp.com/releases">jaxxon</a> [beats]</li>
       </ul>
   </div>
   <div class="column">
@@ -97,7 +70,7 @@ span:hover + .hoverimg{
         |[]| [] | <a href="https://jaxxons.house/room" target="_self">enter</a>
     </pre>
   </div>
-</div>  
+</div>
 <br>
 <!-- cat part -->
 <p>this is a nice cat. he is vibin</p>
