--- a/jaxxons.house/about/index.html
+++ b/jaxxons.house/about/index.html
@@ -56,8 +56,8 @@
 <br>
     <p>here is a list of things i like:
     <ul style="list-style-type: circle;line-height: 1.6;">
-      <li><a href="https://jaxxons.house/cat">cats</a></li>
-      <li>making & listening to <a href="https://jaxxons.house/headphones">music</a></li>
+      <li><a href="https://jaxxons.house/cat" target="_self">cats</a></li>
+      <li>making & listening to <a href="https://jaxxons.house/headphones" target="_self">music</a></li>
       <li>finding cool websites</li>
       <li>tetris</li>
       <li>going on long walks</li>
