--- a/jaxxons.house/cat/index.html
+++ b/jaxxons.house/cat/index.html
@@ -86,6 +86,9 @@
         <div class="column">
           <img src="/cat_pics/cat_puzzling.jpeg" alt="cat with a cup of noodles on its head" width=40%>
         </div>
+        <div class="column">
+          <img src="/cat_pics/cat_keyboard.png" alt="cat playing the keyboard" width=40%>
+        </div>
       </div>
   </body>
 </html>
