--- a/jaxxons.house/index.html
+++ b/jaxxons.house/index.html
@@ -33,7 +33,7 @@ p {
   </head>
   <body style="background-color:#E6E6FA">
 <br>
-    <p><strong>hello. i'm <a href="https://jaxxons.house/about" target="_self">jaxxon.</a></strong></p>
+    <p style="font-size:22px;">hello. i'm <strong><a href="https://jaxxons.house/about" target="_self">jaxxon.</a></strong></p>
 <br>
 <!-- list of socials etc -->
 <div class="row">
