--- a/jaxxons.house/index.html
+++ b/jaxxons.house/index.html
@@ -33,7 +33,7 @@ p {
   </head>
   <body style="background-color:#E6E6FA">
 <br>
-    <p style="font-size:22px;">hello. i'm <strong><a href="https://jaxxons.house/about" target="_self">jaxxon.</a></strong></p>
+    <p style="font-size:22px;">hello. i'm <strong><a href="https://jaxxons.house/about" target="_self">jaxxon</a>.</strong></p>
 <br>
 <!-- list of socials etc -->
 <div class="row">
@@ -48,7 +48,7 @@ p {
           <li><a href="https://letterboxd.com/jaxxon_a/">letterboxd</a></li>
           <li><a href="https://www.are.na/jaxxon-a">are.na</a></li>
           <li><a href="https://github.com/jaxxon-a">github</a></li>
-          <li>e-mail me:<a href="mailto:jaxxon_a@protonmail.com">jaxxon_a@protonmail.com</a></li>
+          <li>e-mail me:<a href="mailto:jaxxon_a@protonmail.com"> jaxxon_a@protonmail.com</a></li>
           <li>discord: [at]jaxxon#4080
         </ul>
   </div>
