--- a/jaxxons.house/room/index.html
+++ b/jaxxons.house/room/index.html
@@ -24,22 +24,10 @@ header {
   position: relative;
   font-size: 80px;
 }
-a:link {
-  color: #800080;
-  text-decoration: none;
-}
-a:visited {
-  color: #880080;
-  text-decoration: none;
-}
-a:hover {
-  text-decoration: underline;
-  color:#c225b9;
-}
   </style>
   </head>
   <body style="background-color:#E6E6FA">
-<pre style="font-size:16px;"> ___ ___ __ __      ____   ___   ___  ___ ___ 
+<pre style="font-size:16px;"> ___ ___ __ __      ____   ___   ___  ___ ___
 |   |   |  |  |    |    \ /   \ /   \|   |   |
 | _   _ |  |  |    |  D  )     |     | _   _ |
 |  \_/  |  ~  |    |    /|  O  |  O  |  \_/  |
@@ -52,6 +40,7 @@ a:hover {
   <div class="row">
     <div class="column">
         <ul style="font-family:Courier;font-size:60px;">
+          <li><a href="https://jaxxons.house/about" target="_self"> about me</a></li>
           <li><a href="https://jaxxons.house/computer" target="_self"> computer</a></li>
           <li><a href="https://jaxxons.house/headphones" target="_self"> headphones</a></li>
           <li><a href="https://www.instagram.com/jaxxons_warehouse/"> warehouse</a></li>
