--- a/jaxxons.house/about/index.html
+++ b/jaxxons.house/about/index.html
@@ -60,6 +60,7 @@
       <li>making & listening to <a href="https://jaxxons.house/headphones" target="_self">music</a></li>
       <li>finding cool websites</li>
       <li>tetris</li>
+      <li>making terrible puns</li>
       <li>going on long walks</li>
       <li>taking <a href="https://instagram.com/jaxxon_aperture">pictures</a></li>
       <li>making new internet friends</li>
