--- a/jaxxons.house/headphones/index.html
+++ b/jaxxons.house/headphones/index.html
@@ -76,11 +76,18 @@ a:mailto {
       <ul style="list-style-type: none;">
         <li><a href="https://www.youtube.com/playlist?list=PLSF-biYYUDHLxWseIG553_5ZuZxRgdcfJ">sad & obscure</a> [yt]</li>
         <li><a href="https://www.youtube.com/playlist?list=PLSF-biYYUDHIz2V1UH_81nBXrut4q6z_W">incredible live sets</a> [yt]</li>
-        <li><a href="https://open.spotify.com/playlist/0wlhnhAG8bjotY6VZfDMoy">supermarket</a> [spotify]</li>
+        <li><a href="https://www.youtube.com/playlist?list=PLSF-biYYUDHLsa6ERYVDXCxEm_l4Ux3Rm">vibe</a> <i>(easy listening)</i> [yt] </li>
         <li><a href="https://open.spotify.com/playlist/5N94KNKjo54KCevLzohAOT">shreddin</a> [spotify]</li>
         <li><a href="https://open.spotify.com/playlist/0h11XEjzAojhU3LsNY97mz">sludge</a> [spotify]</li>
       </ul>
-    <p style="font-size:15px;"><i>if you have any additions to any of these playlists, feel free to <a href="https://twitter.com/messages/compose?recipient_id=3028362837">dm me</a> or email me at <a href="mailto:jaxxon_a@protonmail.com">jaxxon_a@protonmail.com</a>. </i></p>
+<br>
+    <p>no longer updated</p>
+      <ul style="list-style-type: none;">
+
+        <li><a href="https://open.spotify.com/playlist/0wlhnhAG8bjotY6VZfDMoy">supermarket</a> [spotify]</li>
+      </ul>
+<br>
+      <p style="font-size:15px;"><i>if you have any additions to any of these playlists, feel free to <a href="https://twitter.com/messages/compose?recipient_id=3028362837">dm me</a> or email me at <a href="mailto:jaxxon_a@protonmail.com">jaxxon_a@protonmail.com</a>. </i></p>
   </div>
 </div>
 </html>
