moved some projects to a "no longer updated" section

--- a/jaxxons.house/headphones/index.html
+++ b/jaxxons.house/headphones/index.html
@@ -68,8 +68,15 @@ a:mailto {
         <li><a href="https://rosefelix.bandcamp.com/releases">felix rose</a> [ambient]</li>
         <li><a href="https://budheavy.bandcamp.com/releases">Bud Heavy</a> [sludge / stoner metal]</li>
         <li><a href="https://pispegel.bandcamp.com/releases">Pispegel</a> [diy punk]</li>
-        <li><a href="https://xltxbeats.bandcamp.com/releases">jaxxon</a> [beats]</li>
-        </ul>
+        <li><a href="https://jaxxon-a.bandcamp.com/">jaxxon a</a> [electronic]</li>
+      </ul> 
+<br>
+    <p>no longer updated</p>
+      <ul style="list-style-type: none;">
+        <li><a href="https://xltxbeats.bandcamp.com/">jaxxon</a> [beats]</li>
+        <li><a href="https://rosefelix.bandcamp.com/releases">felix rose</a> [ambient]</li>   
+<br>
+      </ul>
   </div>
   <div class="column">
     <p>playlists</p>
