--- a/jaxxons.house/index.html
+++ b/jaxxons.house/index.html
@@ -48,7 +48,7 @@ p {
           <li><a href="https://letterboxd.com/jaxxon_a/">letterboxd</a></li>
           <li><a href="https://www.are.na/jaxxon-a">are.na</a></li>
           <li><a href="https://github.com/jaxxon-a">github</a></li>
-          <li>e-mail me:<a href="mailto:jaxxon_a@protonmail.com"> jaxxon_a@protonmail.com</a></li>
+          <li>e-mail me: <a href="mailto:jaxxon_a@protonmail.com">jaxxon_a@protonmail.com</a></li>
           <li>discord: [at]jaxxon#4080
         </ul>
   </div>
@@ -56,10 +56,16 @@ p {
     <p>music projects</p>
       <ul style="list-style-type: none;">
         <li><a href="https://thesmellofrain.bandcamp.com/releases">Petrichor, the smell of rain</a> [ambient]</li>
-        <li><a href="https://rosefelix.bandcamp.com/releases">felix rose</a> [ambient]</li>
         <li><a href="https://budheavy.bandcamp.com/releases">Bud Heavy</a> [sludge]</li>
         <li><a href="https://pispegel.bandcamp.com/releases">Pispegel</a> [diy punk]</li>
-        <li><a href="https://xltxbeats.bandcamp.com/releases">jaxxon</a> [beats]</li>
+        <li><a href="https://jaxxon-a.bandcamp.com/">jaxxon a</a> [electronic]</li>
+      </ul> 
+<br>
+    <p>no longer updated</p>
+      <ul style="list-style-type: none;">
+        <li><a href="https://rosefelix.bandcamp.com/releases">felix rose</a> [ambient]</li>
+        <li><a href="https://xltxbeats.bandcamp.com/">jaxxon</a> [beats]</li>     
+<br>
       </ul>
   </div>
   <div class="column">
