--- a/jaxxons.house/about/index.html
+++ b/jaxxons.house/about/index.html
@@ -66,6 +66,7 @@
       <li>making new internet friends</li>
       <li>solving problems</li>
       <li>having nice, serious talks with people and what they are going through</li>
+      <li>anything wholesome</li>
     </ul>
     </p>
   </div>
