--- a/jaxxons.house/cat/index.html
+++ b/jaxxons.house/cat/index.html
@@ -8,87 +8,69 @@
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <style>
-  body {
+body {
   background-color: #E6E6FA;
-  font-size: 100;
   font-family: Courier;
-  padding-left: 20%;
   padding-top: 1%;
   padding-bottom: 5%;
+  max-width: 100%;
 }
-  img {
-  padding: none;
-  border: none;
-  margin: none;
+#container {
+    margin-left: auto;
+    margin-right: auto;
+    width: 1000px;
 }
-.column {
-  float: right;
-  width: 50%;
-  padding: 10px;
+.row .column {
+  align-content: center;
+  width: 80%;
 }
-
-.column img {
-  margin-top: 12px;
-}
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-.row {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 0 4px;
-}
-.column {
-  flex: 50%;
-  padding: 0 4px;
-}
-
-.column img {
-  margin-top: 8px;
-  vertical-align: middle;
+img {
+  align-content: center;
+  width: 75%;
 }
   </style>
   </head>
   <body>
+<div id="container">
 <p style="font-size: 20px;"> here are some more cats. </p><p style="font-size: 14px;"><i>if you have any more nice cat pictures please <a href="https://twitter.com/messages/compose?recipient_id=3028362837">dm me</a> or forward them to <a href="mailto:jaxxon_a@protonmail.com">jaxxon_a@protonmail.com</a>.</i></p>
 <br>
-<br>
+<br>  
+    
       <div class="row">
          <div class="column">
-           <img src="/cat_pics/cat_bus.jpeg" alt="cat driving a bus" width=40%>
+           <img src="/cat_pics/cat_bus.jpeg" alt="cat driving a bus">
          </div>
          <div class="column">
-           <img src="/cat_pics/cat_distancing.png" alt="cat responsibly applying social distancing to prevent the spread of the coronavirus" width=40%>
+           <img src="/cat_pics/cat_distancing.png" alt="cat responsibly applying social distancing to prevent the spread of the coronavirus">
          </div>
          <div class="column">
-            <img src="/cat_pics/cat_ironing.png" alt="cat ironing" width=40%>
+            <img src="/cat_pics/cat_ironing.png" alt="cat ironing">
          </div>
         <div class="column">
-          <img src="/cat_pics/cat_leaf.png" alt="cat with sunglasses and a leaf on its head" width=40%>
+          <img src="/cat_pics/cat_leaf.png" alt="cat with sunglasses and a leaf on its head">
         </div>
         <div class="column">
-          <img src="/cat_pics/cat_melons.jpeg" alt="cat surrounded by melons" width=40%>
+          <img src="/cat_pics/cat_melons.jpeg" alt="cat surrounded by melons">
         </div>
         <div class="column">
-          <img src="/cat_pics/cat_pan.png" alt="cat sitting in a pan" width=40%>
+          <img src="/cat_pics/cat_pan.png" alt="cat sitting in a pan">
         </div>
         <div class="column">
-          <img src="/cat_pics/cat_slinky.jpeg" alt="cat with a slinky on its head" width=40%>
+          <img src="/cat_pics/cat_slinky.jpeg" alt="cat with a slinky on its head">
         </div>
         <div class="column">
-          <img src="/cat_pics/cat_chillin.jpg" alt="cat who is just chillin" width=40%>
+          <img src="/cat_pics/cat_chillin.jpg" alt="cat who is just chillin">
         </div>
     	  <div class="column">
-          <img src="/cat_pics/cat_noodles.png" alt="cat with a cup of noodles on its head" width=40%>
+          <img src="/cat_pics/cat_noodles.png" alt="cat with a cup of noodles on its head">
         </div>
         <div class="column">
-          <img src="/cat_pics/cat_puzzling.jpeg" alt="cat with a cup of noodles on its head" width=40%>
+          <img src="/cat_pics/cat_puzzling.jpeg" alt="cat with a cup of noodles on its head">
         </div>
         <div class="column">
-          <img src="/cat_pics/cat_keyboard.png" alt="cat playing the keyboard" width=40%>
+          <img src="/cat_pics/cat_keyboard.png" alt="cat playing the keyboard">
         </div>
       </div>
+</div>
   </body>
 </html>
