--- a/jaxxons.house/room/index.html
+++ b/jaxxons.house/room/index.html
@@ -35,21 +35,23 @@ header {
 |   |   |     |    |  .  \     |     |   |   |
 |___|___|____/     |__|\_|\___/ \___/|___|___|
 </pre>
-<img src="/skelebones-1.gif" style="float:right;margin-right:18%;width:auto;height:400px;">
+
+<a href="https://www.youtube.com/watch?v=ZoG5jJ3E8rg"><img src="/skelebones-1.gif" style="float:right;margin-right:18%;width:auto;height:400px;" alt="jasper is cool"></a>
 <header>
   <div class="row">
     <div class="column">
         <ul style="font-family:Courier;font-size:60px;">
           <li><a href="https://jaxxons.house/about" target="_self"> about me</a></li>
-          <li><a href="https://jaxxons.house/computer" target="_self"> computer</a></li>
-          <li><a href="https://jaxxons.house/headphones" target="_self"> headphones</a></li>
-          <li><a href="https://www.instagram.com/jaxxons_warehouse/"> warehouse</a></li>
-          <li><a href="https://special.fish/journal"> journal</a></li>
-          <li><a href="https://nin.codes/jaxxon"> switch</a></li>
-          <li><a href="https://www.instagram.com/jaxxon_aperture/"> camera</a></li>
-          <li><a href="https://jaxxons.house/fridge.jpeg"> fridge</a></li>
+          <li><a href="https://jaxxons.house/art"> art</a></li>
           <li><a href="https://jaxxons.house/cat" target="_self"> cat</a></li>
+          <li><a href="https://www.instagram.com/jaxxon_aperture/"> camera</a></li>
+          <li><a href="https://jaxxons.house/computer" target="_self"> computer</a></li>
+          <li><a href="https://jaxxons.house/fridge.jpeg"> fridge</a></li>
+          <li><a href="https://jaxxons.house/headphones" target="_self"> headphones</a></li>
+          <li><a href="https://special.fish/journal"> journal</a></li>
           <li><a href="https://jaxxons.house/rug.html" target="_self"> rug</a></li>
+          <li><a href="https://nin.codes/jaxxon"> switch</a></li>
+          <li><a href="https://www.instagram.com/jaxxons_warehouse/"> warehouse</a></li>
         </ul>
     </div>
   </div>
