--- a/jaxxons.house/art/index.html
+++ b/jaxxons.house/art/index.html
@@ -42,7 +42,7 @@
   </head>
   <body>
   <div id="container">
-    <p>here is a collection of some art i made that i am proudest of:</p>
+    <p>here is a collection of my work that i am proudest of:</p>
     <p style="font-size: 1em;"><i>sorted by newest - oldest</i></p>
     <br>
     <br>
