--- a/jaxxons.house/room/index.html
+++ b/jaxxons.house/room/index.html
@@ -40,9 +40,9 @@ header {
 <header>
   <div class="row">
     <div class="column">
-        <ul style="font-family:Courier;font-size:60px;">
+        <ul style="font-family:Courier;font-size:50px;">
           <li><a href="https://jaxxons.house/about" target="_self"> about me</a></li>
-          <li><a href="https://jaxxons.house/art"> art</a></li>
+          <li><a href="https://jaxxons.house/art" target="_self"> art</a></li>
           <li><a href="https://jaxxons.house/cat" target="_self"> cat</a></li>
           <li><a href="https://www.instagram.com/jaxxon_aperture/"> camera</a></li>
           <li><a href="https://jaxxons.house/computer" target="_self"> computer</a></li>
