--- a/jaxxons.house/index.html
+++ b/jaxxons.house/index.html
@@ -86,12 +86,12 @@ p {
 <div class="row">
   <div class="column">
     <div id="new">
-      <p style="font-size: 22px;padding-top:5%;padding-bottom:4%;">latest release:</p>
+      <p style="font-size:22px;padding-top:5%;padding-bottom:4%;">latest release:</p>
       <a href="https://open.spotify.com/album/70wrLl3e3A9CREm3IHRirm">
       <img src="https://f4.bcbits.com/img/a3377417380_16.jpg" width="500px"></a>
     </div>
   </div>
-<p style="padding:1%;">this is a nice cat. he is vibin</p>
+<p>this is a nice cat. he is vibin</p>
     <div class="column" style="padding-bottom: 5%;">
       <a href="http://www.instagram.com/catlover_garden/">
        <img src="/cat_pics/cat.jpg" alt="a nice cat" width=500 height=500>
