--- a/jaxxons.house/index.html
+++ b/jaxxons.house/index.html
@@ -19,7 +19,7 @@ body {
 .column {
   float: left;
   width: 510px;
-  padding: 5px;
+  padding: 1%;
 }
 .row::after {
   content: "";
@@ -30,9 +30,8 @@ p {
   margin: 2px;
 }
 #new {
-  padding-left:2%;
   width: 300px;
-  padding-bottom:2%;
+  padding: 1%;
 }
   </style>
   </head>
@@ -40,6 +39,7 @@ p {
 <br>
     <p style="font-size:22px;">hello. i'm <strong><a href="https://jaxxons.house/about" target="_self">jaxxon</a>.</strong></p>
 <br>
+
 <!-- list of socials etc -->
 <div class="row">
   <div class="column">
@@ -79,6 +79,8 @@ p {
          /\-_--\
         /  \_-__\
         |[]| [] | <a href="https://jaxxons.house/room" target="_self">enter</a>
+
+
     </pre>
   </div>
 </div>
@@ -86,24 +88,23 @@ p {
 <div class="row">
   <div class="column">
     <div id="new">
-      <p style="font-size:22px;padding-top:5%;padding-bottom:4%;">latest release:</p>
+      <p style="font-size:22px;">latest release:</p>
       <a href="https://open.spotify.com/album/70wrLl3e3A9CREm3IHRirm">
-      <img src="https://f4.bcbits.com/img/a3377417380_16.jpg" width="500px"></a>
+      <img src="https://f4.bcbits.com/img/a3377417380_16.jpg" width=500></a>
     </div>
   </div>
-<p>this is a nice cat. he is vibin</p>
     <div class="column" style="padding-bottom: 5%;">
-      <a href="http://www.instagram.com/catlover_garden/">
-       <img src="/cat_pics/cat.jpg" alt="a nice cat" width=500 height=500>
-      </a>
+      <p style="font-size:22px;padding-bottom:1%;">this is a nice cat. he is vibin</p>
+        <a href="http://www.instagram.com/catlover_garden/">
+        <img src="/cat_pics/cat.jpg" alt="a nice cat" width=500 height=500>
+        </a>
     </div>
     <div class="column">
+      <p style="font-size:22px;color:#E6E6FA;padding-bottom:1%;">secret text</p>
       <a href="https://www.instagram.com/catlover_garden/">
        <img src="/cat_pics/cat2.jpg" alt="the same nice cat but zoomed in" width=500 height=500>
       </a>
     </div>
   </div>
-
-
   </body>
 </html>
