added discord user url

--- a/jaxxons.house/index.html
+++ b/jaxxons.house/index.html
@@ -54,7 +54,7 @@ p {
           <li><a href="https://www.are.na/jaxxon-a">are.na</a></li>
           <li><a href="https://github.com/jaxxon-a">github</a></li>
           <li>e-mail me: <a href="mailto:jaxxon_a@protonmail.com">jaxxon_a@protonmail.com</a></li>
-          <li>discord: [at]jaxxon#4080
+          <li>discord: <a href="https://discordapp.com/users/277897606850543627/">jaxxon#4080</a></li>
         </ul>
   </div>
   <div class="column">
