--- a/jaxxons.house/about/index.html
+++ b/jaxxons.house/about/index.html
@@ -48,7 +48,7 @@
     <a href="https://en.wikipedia.org/wiki/Alkmaar">Alkmaar</a> &
     <a href="https://en.wikipedia.org/wiki/The_Hague">Den Haag</a> for most of my life.
     i was raised <a href="https://en.wikipedia.org/wiki/Bilingualism">bilingually</a>,
-    and i have 3 moms believe it or not. i no longer have green hair [sadly] but i like this picture a lot.
+    and i have 3 moms believe it or not. now i mostly make <a href="https://jaxxons.house/headphones" target="_self">music</a> and work on <a href="https://jaxxons.house/art" target="_self">designing cover art</a> & the likes. i no longer have green hair [sadly] but i like this picture a lot.
     </p>
 
 <br>
@@ -58,7 +58,7 @@
       <li><a href="https://jaxxons.house/cat" target="_self">cats</a></li>
       <li>making & listening to <a href="https://jaxxons.house/headphones" target="_self">music</a></li>
       <li>finding cool websites</li>
-      <li>tetris</li>
+      <li><a href="https://jstris.jezevec10.com/">tetris</a></li>
       <li>making terrible puns</li>
       <li>going on long walks</li>
       <li>taking <a href="https://instagram.com/jaxxon_aperture">pictures</a></li>
