--- a/jaxxons.house/index.html
+++ b/jaxxons.house/index.html
@@ -68,7 +68,7 @@ p {
 <br>
     <p>no longer updated</p>
       <ul style="list-style-type: none;">
-        <li><a href="https://xltxbeats.bandcamp.com/">jaxxon</a> [beats]</li>   
+        <li><a href="https://xltxbeats.bandcamp.com/">xltxbeats</a> [beats]</li>   
         <li><a href="https://rosefelix.bandcamp.com/releases">felix rose</a> [ambient]</li>
 <br>
       </ul>
