--- a/jaxxons.house/headphones/index.html
+++ b/jaxxons.house/headphones/index.html
@@ -33,6 +33,10 @@ header {
   clear: both;
   display: table;
 }
+.center {
+  margin-left: auto;
+  margin-right: auto;
+}
 .my_list a {
 color: #800080;
 }
@@ -52,7 +56,9 @@ a:mailto {
   color: #880080;
   text-decoration: none;
 }
-
+img {
+border-radius: 0%;
+}
   </style>
 
   </head>
@@ -72,7 +78,7 @@ a:mailto {
 <br>
     <p>no longer updated</p>
       <ul style="list-style-type: none;">
-        <li><a href="https://xltxbeats.bandcamp.com/">jaxxon</a> [beats]</li>
+        <li><a href="https://xltxbeats.bandcamp.com/">xltxbeats</a> [beats]</li>
         <li><a href="https://rosefelix.bandcamp.com/releases">felix rose</a> [ambient]</li>   
 <br>
       </ul>
@@ -89,11 +95,12 @@ a:mailto {
 <br>
     <p>no longer updated</p>
       <ul style="list-style-type: none;">
-
         <li><a href="https://open.spotify.com/playlist/0wlhnhAG8bjotY6VZfDMoy">library music</a> [spotify]</li>
       </ul>
 <br>
       <p style="font-size:15px;"><i>if you have any additions to any of these playlists, feel free to <a href="https://twitter.com/messages/compose?recipient_id=3028362837">dm me</a> or email me at <a href="mailto:jaxxon_a@protonmail.com">jaxxon_a@protonmail.com</a>. </i></p>
   </div>
 </div>
+<br>
+  <p style="text-align:center;"><a href="https://jaxxons.house/chart1.jpg">here</a> is a chart of 100 albums i would recommend [11/04/2020]</p>
 </html>
