added soundcloud, moved links into a-z order

--- a/jaxxons.house/computer/index.html
+++ b/jaxxons.house/computer/index.html
@@ -59,16 +59,17 @@ a:hover {
   <div class="column">
     <p>find me on: </p>
         <ul style="font-family:Courier;font-size:10;list-style-type: none;" >
-          <li><a href="https://special.fish/ugh">special.fish</a></li>
-          <li><a href="https://www.instagram.com/jaxxon_a/">instagram</a></li>
-          <li><a href="https://twitter.com/jaxxon_a">twitter</a></li>
-          <li><a href="https://redacted.ch/user.php?id=42143">red</a></li>
-          <li><a href="https://www.yourworldoftext.com/~jaxxon/">yourworldoftext</a></li>
-          <li><a href="https://letterboxd.com/jaxxon_a/">letterboxd</a></li>
           <li><a href="https://www.are.na/jaxxon-a">are.na</a></li>
-          <li><a href="https://github.com/jaxxon-a">github</a></li>
-          <li>e-mail me:<a href="mailto:jaxxon_a@protonmail.com"> jaxxon_a@protonmail.com</a></li>
           <li>discord: <a href="https://discordapp.com/users/277897606850543627/">jaxxon#4080</a></li>
+          <li>e-mail me: <a href="mailto:jaxxon_a@protonmail.com">jaxxon_a@protonmail.com</a></li>
+          <li><a href="https://github.com/jaxxon-a">github</a></li>
+          <li><a href="https://www.instagram.com/jaxxon_a/">instagram</a></li>
+          <li><a href="https://letterboxd.com/jaxxon_a/">letterboxd</a></li>
+          <li><a href="https://redacted.ch/user.php?id=42143">red</a></li>
+          <li><a href="https://soundcloud.com/jaxxon_a">soundcloud</a></li>
+          <li><a href="https://special.fish/ugh">special.fish</a></li>
+          <li><a href="https://twitter.com/jaxxon_a">twitter</a></li>
+          <li><a href="https://www.yourworldoftext.com/~jaxxon/">yourworldoftext</a></li>
         </ul>
   </div>
   <div class="column">
