--- a/jaxxons.house/index.html
+++ b/jaxxons.house/index.html
@@ -45,16 +45,17 @@ p {
   <div class="column">
     <p>find me on: </p>
         <ul style="font-family:Courier;font-size:10;list-style-type:none;" >
-          <li><a href="https://special.fish/ugh">special.fish</a></li>
-          <li><a href="https://www.instagram.com/jaxxon_a/">instagram</a></li>
-          <li><a href="https://twitter.com/jaxxon_a">twitter</a></li>
-          <li><a href="https://redacted.ch/user.php?id=42143">red</a></li>
-          <li><a href="https://www.yourworldoftext.com/~jaxxon/">yourworldoftext</a></li>
-          <li><a href="https://letterboxd.com/jaxxon_a/">letterboxd</a></li>
           <li><a href="https://www.are.na/jaxxon-a">are.na</a></li>
-          <li><a href="https://github.com/jaxxon-a">github</a></li>
-          <li>e-mail me: <a href="mailto:jaxxon_a@protonmail.com">jaxxon_a@protonmail.com</a></li>
           <li>discord: <a href="https://discordapp.com/users/277897606850543627/">jaxxon#4080</a></li>
+          <li>e-mail me: <a href="mailto:jaxxon_a@protonmail.com">jaxxon_a@protonmail.com</a></li>
+          <li><a href="https://github.com/jaxxon-a">github</a></li>
+          <li><a href="https://www.instagram.com/jaxxon_a/">instagram</a></li>
+          <li><a href="https://letterboxd.com/jaxxon_a/">letterboxd</a></li>
+          <li><a href="https://redacted.ch/user.php?id=42143">red</a></li>
+          <li><a href="https://soundcloud.com/jaxxon_a">soundcloud</a></li>
+          <li><a href="https://special.fish/ugh">special.fish</a></li>
+          <li><a href="https://twitter.com/jaxxon_a">twitter</a></li>
+          <li><a href="https://www.yourworldoftext.com/~jaxxon/">yourworldoftext</a></li>
         </ul>
   </div>
   <div class="column">
@@ -89,8 +90,8 @@ p {
   <div class="column">
     <div id="new">
       <p style="font-size:22px;">latest release:</p>
-      <a href="https://open.spotify.com/album/70wrLl3e3A9CREm3IHRirm">
-      <img src="https://f4.bcbits.com/img/a3377417380_16.jpg" width=500></a>
+      <a href="https://soundcloud.com/jaxxon_a/knee-deep-in-the-bool-set">
+      <img src="https://i1.sndcdn.com/artworks-dRQkyQKqbs6NaGLY-H4fEWQ-t500x500.jpg" width=500></a>
     </div>
   </div>
     <div class="column" style="padding-bottom: 5%;">
