--- a/jaxxons.house/room/index.html
+++ b/jaxxons.house/room/index.html
@@ -48,7 +48,7 @@ header {
           <li><a href="https://jaxxons.house/computer" target="_self"> computer</a></li>
           <li><a href="https://jaxxons.house/fridge.jpeg"> fridge</a></li>
           <li><a href="https://jaxxons.house/headphones" target="_self"> headphones</a></li>
-          <li><a href="https://jaxxons.house/journal.txt"> journal</a></li>
+          <li><a href="https://special.fish/journal"> journal</a></li>
           <li><a href="https://jaxxons.house/rug.html" target="_self"> rug</a></li>
           <li><a href="https://nin.codes/jaxxon"> switch</a></li>
           <li><a href="https://www.instagram.com/jaxxons_warehouse/"> warehouse</a></li>
