--- a/jaxxons.house/computer/index.html
+++ b/jaxxons.house/computer/index.html
@@ -68,6 +68,7 @@ a:hover {
           <li><a href="https://redacted.ch/user.php?id=42143">red</a></li>
           <li><a href="https://soundcloud.com/jaxxon_a">soundcloud</a></li>
           <li><a href="https://special.fish/ugh">special.fish</a></li>
+          <li><a href="https://twitter.com/jaxxon_a">twitter</a></li>
           <li><a href="https://www.yourworldoftext.com/~jaxxon/">yourworldoftext</a></li>
         </ul>
   </div>
