--- a/jaxxons.house/index.html
+++ b/jaxxons.house/index.html
@@ -34,7 +34,7 @@ p {
 
     <div class="main">
       <p><strong>BLACK LIVES MATTER.</strong></p>
-      <a style="font-size: 40pt;" target="_blank" href="https://blacklivesmatters.carrd.co">EDUCATE YOURSELF</a>
+      <a style="font-size: 40pt;" target="_blank" href="https://blacklivesmatters.carrd.co">FIND OUT MORE</a>
       <div class="enter">
         <a style="font-size: 10pt;" href="https://jaxxons.house/home">enter site</a>
       </div>
