--- a/jaxxons.house/home/index.html
+++ b/jaxxons.house/home/index.html
@@ -18,7 +18,7 @@ body {
 }
 .column {
   float: left;
-  width: 510px;
+  width: 310px;
   padding: 1%;
 }
 .row::after {
@@ -89,21 +89,21 @@ p {
 <div class="row">
   <div class="column">
     <div id="new">
-      <p style="font-size:22px;">latest release:</p>
-      <a href="https://soundcloud.com/jaxxon_a/knee-deep-in-the-bool-set">
-      <img src="https://i1.sndcdn.com/artworks-dRQkyQKqbs6NaGLY-H4fEWQ-t500x500.jpg" width=500></a>
+      <p style="font-size:16px;">latest release:</p>
+      <a href="https://soundcloud.com/jaxxon_a/kditb2">
+      <img src="/cover.jpg" width=300></a>
     </div>
   </div>
     <div class="column" style="padding-bottom: 5%;">
-      <p style="font-size:22px;padding-bottom:1%;">this is a nice cat. he is vibin</p>
+      <p style="font-size:16px;padding-bottom:1%;">this is a nice cat. they are simply vibing</p>
         <a href="http://www.instagram.com/catlover_garden/">
-        <img src="/cat_pics/cat.jpg" alt="a nice cat" width=500 height=500>
+        <img src="/cat_pics/cat.jpg" alt="a nice cat" width=300 height=300>
         </a>
     </div>
     <div class="column">
-      <p style="font-size:22px;color:#E6E6FA;padding-bottom:1%;">secret text</p>
+      <p style="font-size:16px;color:#E6E6FA;padding-bottom:1%;">secret text</p>
       <a href="https://www.instagram.com/catlover_garden/">
-       <img src="/cat_pics/cat2.jpg" alt="the same nice cat but zoomed in" width=500 height=500>
+       <img src="/cat_pics/cat2.jpg" alt="the same nice cat but zoomed in" width=300 height=300>
       </a>
     </div>
   </div>
