--- a/jaxxons.house/about/index.html
+++ b/jaxxons.house/about/index.html
@@ -58,13 +58,13 @@
     <ul style="list-style-type: circle;line-height: 1.6;">
       <li><a href="https://jaxxons.house/cat" target="_self">cats</a></li>
       <li>making & listening to <a href="https://jaxxons.house/headphones" target="_self">music</a></li>
-      <li>finding cool websites</li>
+      <li>painting</li>
       <li><a href="https://jstris.jezevec10.com/">tetris</a></li>
-      <li>making terrible puns</li>
+      <li>cracking terrible jokes</li>
       <li>going on long walks</li>
       <li>taking <a href="https://instagram.com/jaxxon_aperture">pictures</a></li>
-      <li>making new internet friends</li>
-      <li>solving problems</li>
+      <li>inspiring others to be artistic</li>
+      <li>problemsolving</li>
       <li>having nice, serious talks with people and what they are going through</li>
       <li>anything wholesome</li>
     </ul>
